src/snapshots/blog__snapshot@inside-rust__2020__04__10__lang-team-design-meetings.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2020/04/10/lang-team-design-meetings.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>April Lang Team Design Meetings | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="April Lang Team Design Meetings | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="April Lang Team Design Meetings | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="April Lang Team Design Meetings" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>April Lang Team Design Meetings</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Apr. 10, 2020 &middot; Josh Triplett
     on behalf of <a href="https://www.rust-lang.org/governance/teams/lang">the language team</a> 
    </div>

    <div class="post">
      <p>We've scheduled our <strong>language team design meetings</strong> for April. We have plans
for three meetings:</p>
<h1><a href="#try-blocks-try-traits-functions-that-try-oh-my" aria-hidden="true" class="anchor" id="try-blocks-try-traits-functions-that-try-oh-my"></a>try blocks, Try traits, functions that try, oh my!</h1>
<p>(Update: tentatively moved to May 4.)</p>
<p>Clear the path to stabilizing <code>try</code> blocks and the <code>Try</code> trait, and identify
some next steps for function-level try.</p>
<p>Agenda:</p>
<ul>
<li><a href="https://github.com/rust-lang/rust/issues/70941">Resolving <code>Ok</code>-wrapping for <code>try</code>
blocks</a></li>
<li>Discuss revisions to the <code>Try</code> trait required for stabilization.</li>
<li>Discuss syntax for early exit from a <code>try</code> with an error (<code>Err(e)?</code>): <code>fail</code>,
<code>throw</code>, <code>raise</code>, <code>yeet</code>, etc.</li>
<li>If we have time, talk some about possibilities for function-level <code>try</code>.</li>
</ul>
<h1><a href="#april-20----edition-planning" aria-hidden="true" class="anchor" id="april-20----edition-planning"></a>April 20 -- Edition planning</h1>
<p>Plan the 2021 edition, with a checklist of language features we will need to
land in 2020 if we want to ship them in Rust 2021. We hope to emerge from this
meeting with a checklist to guide our efforts, which we can adapt through the
process.</p>
<h1><a href="#april-27----type-aliases-and-traits-enforcement" aria-hidden="true" class="anchor" id="april-27----type-aliases-and-traits-enforcement"></a>April 27 -- Type aliases and traits enforcement</h1>
<p>Long-standing issue: <code>type Foo&lt;T: Trait&gt; = ...</code> doesn't enforce <code>T: Trait</code>.</p>
<p>Goal:</p>
<ul>
<li>Discuss the situation with type aliases and decide what actions we may want
to take.</li>
<li>Or, if we don't reach a decision, decide what measurements we might need to
reach one.</li>
<li>Ideally, decide about <a href="https://github.com/rust-lang/rust/pull/69741">estebank's
PR</a>.</li>
</ul>
<h2><a href="#about-the-language-team-design-meetings" aria-hidden="true" class="anchor" id="about-the-language-team-design-meetings"></a>About the language team design meetings</h2>
<p>The idea of the design meeting is that it's a time for us to have in-depth
discussions on some particular topic. This might be a burning problem that
we've discovered, an update on some existing design work, or a forward looking
proposal.</p>
<p>The meetings are open for anyone to listen in and attend. They are typically
also recorded and posted online, along with minutes, after the fact. They
generally take place on Mondays at noon Eastern time, 9am Pacific time -- but
for the precise scheduling you should check the <a href="https://github.com/rust-lang/lang-team/#meeting-calendar">lang team calendar</a>. Scheduled
meetings are subject to change and cancelation. In that case, the calendar
events will be updated.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
